--- a/sample.bib
+++ b/sample.bib
@@ -42,6 +42,22 @@
 	year = {1979}
 }
 
+@BOOK{burgerprinciples2009,
+	author = {Burger, W and Burge, M. J},
+	title = {Principles of digital image processing: Core algorithms},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	year = {2009}
+}
+
+
+@BOOK{woodfordnumerical2012,
+	author = {Woodford, C and Philips, C.},
+	title = {Numerical methods with worked examples: Matlab edition},
+	publisher = {Springer-Verlag},
+	address = {New York},
+	year = {2012}
+}
 @BOOK{Book2001,
   author = {M. Goossens and F. Mittelbach and A. Samarin},
   title = {The {LaTeX} Companion},
