feb 26 edits evening

--- a/sample.bib
+++ b/sample.bib
@@ -71,6 +71,16 @@
 
 
 %%%%%%% journal
+
+@ARTICLE{walldenstudying2011,
+	author = {M. Wallden and J.Elf},
+	title = {Studying transcriptional interaction in single cells at sufficient resolution},
+	journal = {Current Opinion in Biotechnology},
+	year = {2011},
+	volume = {22},
+	pages = {81-86}
+}
+
 @ARTICLE{dzyubachykadvanced2010,
 	author = {O. Dzyubachyk and W. A. van Cappellen and J. Essers and W. J. Niessen and E. Meijering},
 	title = {Advanced Level-Set-Based Cell Tracking in Time-Lapse Fluorescence Microscopy},
@@ -104,7 +114,7 @@
 	journal = {Science},
 	year = {2002},
 	volume = {297},
-	pages = {1183–1186}
+	pages = {1183-1186}
 }
 
 @ARTICLE{youngmeasuring2012,
@@ -131,7 +141,7 @@
 	journal = {Philosophical Transactions of the Royal Society B: Biological Sciences},
 	year = {2012},
 	volume = {368},
-	pages = {20120025}
+	pages = {1-8}
 }
 
 @ARTICLE{marquezmorphological2014,
@@ -244,7 +254,7 @@
 	title = {Reliable cell tracking by global data association},
 	booktitle = {Proceedings of IEEE International Symposium on Biomedical Imaging: From Nano to Macro},
 	year = {2011},
-	pages = {1004–1010},
+	pages = {1004-1010},
 	publisher = {IEEE }
 }
 
