final submission name double.pdf added

--- a/sample.bib
+++ b/sample.bib
@@ -265,7 +265,7 @@
 	title = {Optimal Joint Segmentation and Tracking of Escherichia Coli in the Mother Machine},
 	booktitle = {Proceedings of Bayesian and grAphical Models for Biomedical Imaging},
 	year = {2014},
-	editor = {M. Jorge Cardoso,	Ivor Simpson, Tal Arbel, Doina Precup, Annemie Ribbens a},
+	editor = {M. Jorge Cardoso and Ivor Simpson and Tal Arbel and Doina Precup and Annemie Ribbens},
 	volume = { 8677},
 	series = {Lecture Notes in Computer Science},
 	pages = {25-36},
